
CHANGE: configurability
REASON: people expect some amount of configurability, rather than reading a configuration file yacco collects all configuration options inside the "config" submodule to make patching easier.
No configuration file is read.

CHANGE: ctrl+left_click is equivalent to middle_click, alt+left_click is equivalent to right_click
REASON: an abundance of pointing devices curently available lacks a middle button (or has a scroll wheel that acts as one but is uncomfortable to use), some pointing devices don't even have a right button. Therefore a generic way to supplement them is needed

CHANGE: removed commands: Font, Indent, Tab
REASON: All this commands have been replaced by external commands that use the extensions to the filesystem interface

CHANGE: removed command: Incl
REASON: No special code for the C language is implemented, rules for things similar to the Incl mechanism can be added to the plumb configuration

CHANGE: removed command: Local
REASON: The command is related to plan 9 namespaces that don't exist in unix. The new command Setenv to set environment variables is provided

CHANGE: the escape key does nothing, return in the tag selects everything past the | character and executes it
REASON: selecting through escape is unusual, anyway escape can be bound to anything the user might want through the shortcut configuration file. Return in the tag would otherwise be useless

CHANGE: In the edit language #w<number> selects word-by-word

CHANGE: unlimited Undo and Redo

CHANGE: added LookFile command to do incremental search of files to open

CHANGE: Edit's s command will replace all occourences of the regular expression unless given an integer parameter specifying which one to change. The 'g' flag is accepted but does nothing.

CHANGE: Edit's g command will only evaluate its argument when the regexp matches the entire region. The original behaviour can be obtained prefixing and suffixing the regexp with .*. The reverse would be hard.