@@ -2,4 +2,10 @@
 uno	due	tre
 quattro	cinque-blah-bl	sei
 
+aasdasd
+	a
+	aasda
+	asdas
+asdas
+
 echo echo ciao
